# stock_prediction

./: .gitignore  ST_CLIENT.py  main.py  pyproject.toml
backtest/: attribution.py  barra_simple.py  benchmark.py  constraints.py  cost_model.py  engine.py  exposure_report.py  optimizer.py  optimizer_v2.py  portfolio_backtest.py  regime_sampler.py  risk_guard.py  risk_model.py
config/: crypto_network.py  crypto_storage.py  crypto_universe.py  data_availability.py  data_sla.py  experiment.py  feature_flags.py  feature_path.py  network_profiles.py  production_features.py  qlib_runtime.py  rolling_splits.py  settings.py  watchlist.py  xwlb_theme_baskets.yaml
docs/: CLAUDE.md  b9_shadow_monitoring_plan_20260613.md  data_redundancy_audit_20260617.md  fund_flow_corruption_rca_20260616.md  health_truthfulness_audit_20260606.md  launchd_migration_plan_20260616.md  llm_channel_1_research_rating_spike_20260609.md  llm_channel_2_irm_qa_spike_20260609.md  llm_channel_3_insider_trading_spike_20260609.md  llm_channel_4_regulator_penalty_spike_20260609.md  llm_l6_backfill_plan_20260607.md  lobster_factor_roadmap_20260616.md  lobster_factor_roadmap_v2_20260617.md  loo_ablation_20260606.md  paper_trade_209_vs_242_design_20260616.md  phase_b4_verdict_20260606.md  phase_b5_bucket_b_verdict_20260606.md  phase_b6_3_llm_24split_verdict_20260607.md  phase_b6_llm_verdict_20260606.md  phase_b6_v4_llm_12col_verdict_20260607.md  phase_b7_verdict_20260607.md  phase_b8_4way_candidate_ablation_20260607.md  phase_b9_verdict_20260609.md  phase_b_loo_audit_20260606.md  sla_gate_audit_20260607.md  (+6 more)
(+441 files in other folders)
