[project]
name = "stock-prediction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "qlib>=0.9.0",
    "akshare>=1.10.0",
    "httpx>=0.27.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "lightgbm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
