[project]
name = "stock-prediction"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.10.0",
    "ccxt>=4.0.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
qlib = [
    "qlib>=0.9.0",
    "lightgbm>=4.0.0",
]
nlp = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]
train = [
    "qlib>=0.9.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "tianshou>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
]
